crates/red_knot_python_semantic/resources/mdtest/snapshots/tuples.md_-_Comparison___Tuples_-_Equality_with_elements_that_incorrectly_implement_`__bool__`.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: tuples.md - Comparison: Tuples - Equality with elements that incorrectly implement `__bool__`
mdtest path: crates/red_knot_python_semantic/resources/mdtest/comparison/tuples.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     __bool__: None = None
3 | 
4 | class A:
5 |     def __eq__(self, other) -> NotBoolable:
6 |         return NotBoolable()
7 | 
8 | # error: [unsupported-bool-conversion]
9 | (A(),) == (A(),)
```

# Diagnostics

```
error: lint:unsupported-bool-conversion
 --> /src/mdtest_snippet.py:9:1
  |
8 | # error: [unsupported-bool-conversion]
9 | (A(),) == (A(),)
  | ^^^^^^^^^^^^^^^^ Boolean conversion is unsupported for type `NotBoolable`; its `__bool__` method isn't callable
  |

```
